refactor: enhance ProductController and ProductDTO documentation for improved clarity and maintainability; streamline API response annotations